--- a/cheat_sheet.tex
+++ b/cheat_sheet.tex
@@ -42,10 +42,19 @@
 	\begin{itemize}
 		\item As a parametrization: $(x, y, z) = \underline{r}(u_0, v_0) + a\underline{r_u}(u_0, v_0) + b\underline{r_v}(u_0, v_0)$
 		\item As a level set (Standard equation): $\underline{n} \cdot ((x, y, z) - \underline{r}(u_0, v_0)) = 0$
-	\end{itemize}		
-	\item \textbf{cylinder}: $\underline{r}(\theta, z) = (R\cos(\theta), R\sin(\theta), z)$
-	\item \textbf{sphere}: $\underline{r}(\theta, \phi) = (R\sin(\phi)\cos(\theta), R\sin(\phi)\sin(\theta), R\cos(\phi))$
-	\item \textbf{graph $z = f(x, y)$}: $\underline{r}(x, y) = (x, y, f(x, y))$
+	\end{itemize}	
+	\item \textbf{Parametrization of special surfaces}	
+	\begin{itemize}
+		\item \textbf{cylinder}: $\underline{r}(\theta, z) = (R\cos(\theta), R\sin(\theta), z)$
+		\item \textbf{sphere}: $\underline{r}(\theta, \phi) = (R\sin(\phi)\cos(\theta), R\sin(\phi)\sin(\theta), R\cos(\phi))$
+		\item \textbf{graph $y = f(x)$}: $\underline{r}(x) = (x, f(x))$
+	\end{itemize}
+	\item \textbf{Parametrization of curves}	
+	\begin{itemize}
+		\item \textbf{line segment}: $\underline{r}(t) = \underline{a} + t(\underline{b} - \underline{b})$
+		\item \textbf{circle in $R^2$}: $\underline{r}(t) = (R\cos(t), R\sin(t))$
+		\item \textbf{graph $z = f(x, y)$}: $\underline{r}(x, y) = (x, y, f(x, y))$
+	\end{itemize}
 
 \end{itemize}
 
