finalizing sheet cheat

--- a/cheat_sheet.tex
+++ b/cheat_sheet.tex
@@ -11,7 +11,7 @@
 
 \begin{document}
 
-\scriptsize
+\tiny
 \paragraph{Basics}
 \begin{itemize}
 	\item dot product: $\underline{a} \cdot \underline{b} = a_1 b_1 + a_2b_2 + ... = |\underline{a}| |\underline{b}| \cos{\theta} $, $W = \underline{F} \cdot \underline{d}$ where F is force and d is distance
@@ -83,7 +83,6 @@
 
 
 \paragraph{Gradient Vector $\nabla f = (f_{x_1}, f_{x_2}, ..., f_{x_n}) $}
-
 	\begin{itemize}
 			\item Maximum increase: the direction: direction of $\nabla f$ ; the rate:  $|\nabla f|$
 			\item Minimum increase: opposite direction of $\nabla f$ ; the rate:  $- |\nabla f|$
@@ -105,7 +104,16 @@
 					\item If $D < 0$  then \underline{p} is a saddle point
 				\end{itemize} 
 			\item \textbf{chain rule}: $f = f(\underline{x}) , x_i = x_i(\underline{t})$ then $\frac{\partial{f}}{\partial{t_i}} = \nabla f(\underline{x}) \cdot  \frac{\partial{\underline{x}}}{\partial{t_i}}$ 
+\end{itemize} 
 
+\paragraph{Coordinate systems}
+
+\begin{itemize}
+	\item \textbf{Rectangular Coordinates $(x, y, z)$}
+
+
+	\item \textbf{Cylinder Coordinates $(\theta, r, z)$}
+	\item \textbf{Spherical Coordinates$(\phi, \theta, \rho)$}
 
 \end{itemize} 
 
