--- a/cheat_sheet.tex
+++ b/cheat_sheet.tex
@@ -154,16 +154,14 @@
 					\item \textbf{Cylinder $\underline{r}(\theta, z) = (R\cos(\theta), R\sin(\theta),z)$}: $dS = Rdz d\theta$
 				\end{itemize}
 			\item \textbf{Surface Area}: $\int\int_D{dS} = \int\int_D{dS}$  $\int\int_D{|\underline{r_u} \times \underline{r_u}| du dv} $
-
 		\end{itemize}
 	\item \textbf{Mass} given a density $\delta_ar(x, y)$ in  $R^2$ or $\delta(x, y, z)$ in $R^3$  the mass is: 
 		\begin{itemize}
+			\item $M = \int\int_R{\delta_ar(x, y)dA}$ $M = \int\int\int_R{\delta(x, y, z)dV}$
 		\end{itemize}
 
 
 	
-
-
 \end{itemize}
 
 \end{document}		
