--- a/cheat_sheet.tex
+++ b/cheat_sheet.tex
@@ -4,8 +4,8 @@
 \usepackage{amsmath}
 \usepackage{color,soul}
 \usepackage[a4paper,bindingoffset=0.05in,%
-            left=0.05in,right=0.05in,top=0.05in,bottom=0.05in,%
-            footskip=0.05in]{geometry}
+            left=0.05in,right=0.05in,top=0.05in,bottom=0.25in,%
+            footskip=0.1in]{geometry}
 % \usepackage{multicol}
 \usepackage{physics}
 
@@ -160,8 +160,10 @@
 			\item $M = \int\int_R{\delta_ar(x, y)dA}$ $M = \int\int\int_R{\delta(x, y, z)dV}$
 		\end{itemize}
 
-
-	
 \end{itemize}
 
-\end{document}		
+\paragraph{Vector Fields, Line Integral (work), Conservative Field, Flux, the 3 big theorems}
+
+
+
+\end{document}	
